<resources>
    <string name="app_name">Alzhei Games</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="todo">TODO</string>
    <string name="btn_juego">Juegos</string>
    <string name="btn_asistencia">Teleasistencia</string>
    <string name="btn_salir">Cerrar Sesión</string>
    <string name="btn_emergencia">Emergencia</string>
    <string name="btn_mensajeria">Mensajeria</string>
    <string name="btn_salirTele">Salir</string>
</resources>