<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PacienteActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="40px"
            android:paddingBottom="40px">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#AFBCFF"
                app:cardCornerRadius="13dp">

                <LinearLayout
                    android:layout_width="328dp"
                    android:layout_height="150dp"
                    android:background="#2200ACC1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="117dp"
                        android:layout_height="76dp"
                        app:srcCompat="@drawable/videojuego" />

                    <Button
                        android:id="@+id/juego"
                        android:layout_width="298dp"
                        android:layout_height="70dp"
                        android:backgroundTint="#004AA5"
                        android:onClick="juegos_btn"
                        android:text="@string/btn_juego"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="40px"
            android:paddingBottom="40px">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#AFBCFF"
                app:cardCornerRadius="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="#2200ACC1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagen"
                        android:layout_width="71dp"
                        android:layout_height="112dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/doctor" />

                    <Button
                        android:id="@+id/asistencia"
                        android:layout_width="298dp"
                        android:layout_height="70dp"
                        android:backgroundTint="#004AA5"
                        android:onClick="teleasistencia_btn"
                        android:text="@string/btn_asistencia"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="40px"
            android:paddingBottom="40px">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#AFBCFF"
                app:cardCornerRadius="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="#2200ACC1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagenCerrar"
                        android:layout_width="77dp"
                        android:layout_height="83dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/cerrar" />

                    <Button
                        android:id="@+id/cerrarSesson"
                        android:layout_width="298dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#004AA5"
                        android:onClick="salir_btn"
                        android:text="@string/btn_salir"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>